; ModuleID = '/home/carl/AnghaBench/twemproxy/src/extr_nc_log.c_log_loggable.c'
source_filename = "/home/carl/AnghaBench/twemproxy/src/extr_nc_log.c_log_loggable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.logger = type { i32 }

@logger = common dso_local global %struct.logger zeroinitializer, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @log_loggable(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca %struct.logger*, align 8
  store i32 %0, i32* %3, align 4
  store %struct.logger* @logger, %struct.logger** %4, align 8
  %5 = load i32, i32* %3, align 4
  %6 = load %struct.logger*, %struct.logger** %4, align 8
  %7 = getelementptr inbounds %struct.logger, %struct.logger* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = icmp sgt i32 %5, %8
  br i1 %9, label %10, label %11

10:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %12

11:                                               ; preds = %1
  store i32 1, i32* %2, align 4
  br label %12

12:                                               ; preds = %11, %10
  %13 = load i32, i32* %2, align 4
  ret i32 %13
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
